RESOLVED FIXED196420
Web Inspector: Uncaught Exception: null is not an object (evaluating 'this.ownerDocument.frameIdentifier')
https://bugs.webkit.org/show_bug.cgi?id=196420
Summary Web Inspector: Uncaught Exception: null is not an object (evaluating 'this.ow...
Joseph Pecoraro
Reported 2019-03-29 20:10:08 PDT
Uncaught Exception: null is not an object (evaluating 'this.ownerDocument.frameIdentifier') Steps to Reproduce: 1. Start a timeline recording on reddit.com 2. Scroll around a bit / interact => Exception ------- Inspected URL: https://www.reddit.com/ Dispatch Source: Protocol Event Protocol Event: {"method":"DOM.didFireEvent","params":{"nodeId":436,"eventName":"canplaythrough","timestamp":37.480989417003}} Uncaught Exceptions: - null is not an object (evaluating 'this.ownerDocument.frameIdentifier') (at DOMNode.js:186:59) frameIdentifier @ DOMNode.js:186:59 frame @ DOMNode.js:192:68 addRecord @ TimelineRecording.js:322:49 _addRecord @ TimelineManager.js:830:40 _handleDOMNodeDidFireEvent @ TimelineManager.js:1247:24 dispatch @ Object.js:165:30 dispatchEventToListeners @ Object.js:180:21 _addDOMEvent @ DOMNode.js:805:38 didFireEvent @ DOMNode.js:755:26 didFireEvent @ DOMManager.js:164:26 didFireEvent @ DOMObserver.js:117:35 dispatchEvent @ InspectorBackend.js:340:42 _dispatchEvent @ Connection.js:195:32 dispatch @ Connection.js:72:32 dispatchMessageFromTarget @ TargetManager.js:101:35 dispatchMessageFromTarget @ TargetObserver.js:42:51 dispatchEvent @ InspectorBackend.js:340:42 _dispatchEvent @ Connection.js:195:32 dispatch @ Connection.js:72:32 dispatch @ InspectorBackend.js:178:52 dispatchNextQueuedMessageFromBackend @ MessageDispatcher.js:42:34 Additional Details: cause --> An uncaught exception was thrown while handling event: DOM.didFireEvent
Attachments
Patch (17.46 KB, patch)
2019-04-18 23:17 PDT, Devin Rousso
no flags
Radar WebKit Bug Importer
Comment 1 2019-03-29 20:10:23 PDT
Devin Rousso
Comment 2 2019-04-18 23:17:37 PDT
Created attachment 367787 [details] Patch This should probably have a test, but I'm going to see how the bots like it first...
EWS Watchlist
Comment 3 2019-04-18 23:18:41 PDT
This patch modifies the inspector protocol. Please ensure that any frontend changes appropriately use feature checks for new protocol features.
Joseph Pecoraro
Comment 4 2019-04-23 13:38:56 PDT
Comment on attachment 367787 [details] Patch Looks good to me too
WebKit Commit Bot
Comment 5 2019-04-23 14:06:48 PDT
Comment on attachment 367787 [details] Patch Clearing flags on attachment: 367787 Committed r244566: <https://trac.webkit.org/changeset/244566>
WebKit Commit Bot
Comment 6 2019-04-23 14:06:50 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.